@@ -1,3 +1,7 @@
+2013-04-23  Gankov Andrey  <gav@qsolution.ru>
+
+	* IncomeSlip.cs: 
+
 2013-04-22  Gankov Andrey  <gav@qsolution.ru>
 
 	* MainWinCash.cs:
